--- a/cfg/params.yaml
+++ b/cfg/params.yaml
@@ -12,11 +12,11 @@
 
 /**:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: false
     frames/odom: odom
     frames/baselink: base_link
-    frames/lidar: lidar
-    frames/imu: imu
+    frames/lidar: "os_lidar"
+    frames/imu: "imu_frame"
 
     map/waitUntilMove: true
     map/dense/filtered: false
